[package]
name = "earthquake"
version = "0.3.2"
edition = "2024"
description = "A credential stuffing framework designed for security testing"
license = "GPL-3.0"
repository = "https://github.com/Velka-DEV/earthquake"
authors = ["Velka-DEV <contact@velka.dev>"]
readme = "README.md"
keywords = ["security", "testing", "credential-stuffing"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = [
  "json",
  "cookies",
  "socks",
  "brotli",
  "gzip",
  "deflate",
  "zstd",
  "multipart",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
chrono = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam = "0.8"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
anyhow = "1.0"
indicatif = "0.17"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
url = "2.5"
toml = "0.8"
parking_lot = "0.12"
rquest = "5"
rquest-util = "2"
